...
            "value": "Neue Nachricht"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Nuevo mensaje"
...
            "value": "Pošalji"
          }
        },
        "da": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Send"
          }
        },
        "de": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Senden"
...
            "value": "Einladen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Invite"
          }
        },
        "es": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Invitar"
...
