...
    "terminal.key.control": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Control"
          }
        },
        "ar": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Control"
...
    "terminal.key.escape": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Escape"
          }
        },
        "ar": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Escape"
...
